Fix downloadable cv link on mobile

--- a/src/components/sections/CVsection/cv-section.scss
+++ b/src/components/sections/CVsection/cv-section.scss
@@ -127,7 +127,7 @@
     }
     #my-cv-to-download {
         @media (max-width: 767px) {
-            margin-top: 10px;
+            margin-top: 50px;
         }
     }
 }
